force-app/main/default/objects/KimbleOne__OutboundInterfaceRun__c/KimbleOne__OutboundInterfaceRun__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Export</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>