force-app/main/default/objects/KimbleOne__OutboundInterfaceRun__c/fields/KimbleOne__Complete__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Outbound Interface Run completed successfully.</description>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>