force-app/main/default/objects/KimbleOne__OutboundInterfaceRun__c/fields/KimbleOne__Finished__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Finished__c</fullName>
    <description>The time the Outbound Interface run finished processing.</description>
    <label>Finished</label>
    <type>DateTime</type>
</CustomField>