force-app/main/default/objects/KimbleOne__OutboundInterfaceRun__c/fields/KimbleOne__InterfaceMap__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InterfaceMap__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + KimbleOne__InterfaceRun__r.KimbleOne__InterfaceMap__c, KimbleOne__InterfaceRun__r.KimbleOne__InterfaceMap__r.Name,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Obsolete - Interface Map</label>
    <type>Text</type>
</CustomField>