force-app/main/default/objects/KimbleOne__OutboundInterfaceRun__c/fields/KimbleOne__InterfaceRun__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InterfaceRun__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interface Run</label>
    <referenceTo>KimbleOne__InterfaceRun__c</referenceTo>
    <relationshipName>OutboundInterfaceRuns</relationshipName>
    <type>Lookup</type>
</CustomField>