force-app/main/default/objects/KimbleOne__OutboundInterfaceRun__c/fields/KimbleOne__InterfaceType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InterfaceType__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + KimbleOne__InterfaceRun__r.KimbleOne__InterfaceType__c, KimbleOne__InterfaceRun__r.KimbleOne__InterfaceType__r.Name,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interface Type</label>
    <type>Text</type>
</CustomField>