force-app/main/default/objects/KimbleOne__OutboundInterfaceRun__c/fields/KimbleOne__Notes__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Notes__c</fullName>
    <formula>KimbleOne__InterfaceRun__r.KimbleOne__Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notes</label>
    <type>Text</type>
</CustomField>