force-app/main/default/objects/KimbleOne__OutboundInterfaceRun__c/fields/KimbleOne__ObjectTypeName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ObjectTypeName__c</fullName>
    <description>Used to determine what object type the outbound interface run is related to.</description>
    <label>Object Type Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>