force-app/main/default/objects/KimbleOne__OutboundInterfaceRun__c/fields/KimbleOne__Started__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Started__c</fullName>
    <description>The time the Outbound Interface run started processing.</description>
    <label>Started</label>
    <type>DateTime</type>
</CustomField>