force-app/main/default/objects/KimbleOne__OutboundInterfaceRun__c/fields/KimbleOne__Status__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Status__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + KimbleOne__InterfaceRun__r.KimbleOne__Status__c, KimbleOne__InterfaceRun__r.KimbleOne__Status__r.Name,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>