force-app/main/default/objects/KimbleOne__OutboundInterfaceRun__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__InterfaceType__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__Started__c</columns>
    <columns>KimbleOne__Finished__c</columns>
    <columns>KimbleOne__Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>