force-app/main/default/objects/KimbleOne__OutboundInterfaceRun__c/listViews/KimbleOne__APExports.listView-meta.xml
<ListView>
    <fullName>KimbleOne__APExports</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Started__c</columns>
    <columns>KimbleOne__Finished__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__Notes__c</columns>
    <columns>KimbleOne__Errors__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__InterfaceType__c</field>
        <operation>contains</operation>
        <value>AP</value>
    </filters>
    <label>AP Exports</label>
    <language>en_US</language>
</ListView>